--- a/css/style.css
+++ b/css/style.css
@@ -807,13 +807,13 @@ div.checker,div.radio{position:relative}div.checker,div.checker input,div.checke
 	-webkit-box-shadow:0 0 18px rgba(0,0,0,0.14);
 	box-shadow:0 0 18px rgba(0,0,0,0.14);
 }
-.table {
+table {
 	width:100%;
 	margin:32px 0 20px;
 	-webkit-box-shadow:2px 3px 21px rgba(0,0,0,0.09);
 	box-shadow:2px 3px 21px rgba(0,0,0,0.09);
 }
-.table th {
+table th {
 	color:#ffffff;
 	font-size:16px;
 	line-height:20px;
@@ -822,21 +822,21 @@ div.checker,div.radio{position:relative}div.checker,div.checker input,div.checke
 	padding:9px 40px 11px;
 	background:#4e9cda;
 }
-.table th {
+table th {
 	border-left:1px solid #3581be;
 }
-.table td {
+table td {
 	font-size:14px;
 	line-height:20px;
 	padding:10px 40px;
 	background:#f6f6f6;
 	border-left:1px solid #cccccc;
 }
-.table tr:nth-child(2n) td {
+table tr:nth-child(2n) td {
 	background:#e4e4e4;
 }
-.table th:first-child,
-.table td:first-child {
+table th:first-child,
+table td:first-child {
 	border-left-width:0;
 }
 .gallery {
@@ -872,6 +872,7 @@ div.checker,div.radio{position:relative}div.checker,div.checker input,div.checke
 	padding:15px;
 }
 .gallery--pic {
+	display:block;
 	max-width:264px;
 	height:183px;
 	margin:0 auto;
@@ -956,15 +957,15 @@ div.checker,div.radio{position:relative}div.checker,div.checker input,div.checke
 	.footer__row {
 		padding:0 20px;
 	}
-	.table {
+	table {
 		margin:22px 0 20px;
 	}
-	.table th {
+	table th {
 		font-size:12px;
 		line-height:15px;
 		padding:7px 24px 9px;
 	}
-	.table td {
+	table td {
 		font-size:11px;
 		line-height:15px;
 		padding:8px 24px;
@@ -1046,10 +1047,11 @@ div.checker,div.radio{position:relative}div.checker,div.checker input,div.checke
 		position:absolute;
 		right:0;
 		top:0;
-		z-index:5;
+		z-index:50;
 		display:block;
 		width:51px;
 		height:55px;
+		cursor:pointer;
 		background:url('../img/mobile-menu-close.png') no-repeat 15px 17px;
 	}
 	.menu {
@@ -1448,7 +1450,7 @@ div.checker,div.radio{position:relative}div.checker,div.checker input,div.checke
 	.gallery--pic {
 		border-width:0;
 	}
-	.table {
+	table {
 		display:none;
 	}
 	.table-rebuild {
